--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -80,11 +80,20 @@ footer {
 .services button {
   margin-left: 1em;
 }
+.services .button {
+  padding-top: 0.5em;
+  border-top: 1px solid rgba(80, 78, 78, 0.534);
+  background-color: rgba(80, 78, 78, 0.212);
+}
+.services h4 {
+  margin-top: 0.5em;
+  margin-left: 1em;
+}
 .services p {
   padding: 1em;
 }
 .servicesContent {
-  width: 100%;
+  border: 1px solid rgba(80, 78, 78, 0.534);
 }
 .title {
   margin-top: 10%;
